[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/main/credits/credits-end-text.gd" type="Script" id=1]
[ext_resource path="res://src/main/ui/theme/h3.theme" type="Theme" id=2]
[ext_resource path="res://src/main/credits/CreditsLetter.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/main/credits/end-text-title.gd" type="Script" id=4]
[ext_resource path="res://src/main/ui/DiagonalParticles.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/main/chat/ui/bebebe.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/main/career/ui/clock-advance.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/main/career/ui/clock-ring.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/main/puzzle/combo-00.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/main/puzzle/combo-06.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/main/puzzle/combo-01.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/main/puzzle/combo-07.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/main/puzzle/combo-04.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/main/puzzle/combo-03.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/main/puzzle/combo-02.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/main/puzzle/combo-05.wav" type="AudioStream" id=16]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 95.2876, 52.8645, 0, 0, 0, 0, 144.008, 58.0739, 0, 0, 0, 0, 194.45, 64.7984, 0, 0, 0, 0, 224.274, 52.1219, 0, 0, 0, 0, 260.499, 53.5568, 0, 0, 0, 0, 336.114, 51.7751, 0, 0, 0, 0, 369.634, 54.3364, 0, 0, 0, 0, 415.46, 61.6862 )
}

[node name="EndText" type="Node2D"]
position = Vector2( 285.088, 309.223 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -24.694
margin_top = -160.0
margin_right = 447.306
margin_bottom = 140.0
mouse_filter = 2
size_flags_vertical = 4
theme = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 472.0
margin_bottom = 64.0

[node name="CompletionContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 234.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 63 )
mouse_filter = 0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/CompletionContainer"]
margin_right = 234.0
margin_bottom = 30.0
text = "Completion:"
align = 1

[node name="Value" type="Label" parent="VBoxContainer/HBoxContainer/CompletionContainer"]
margin_top = 34.0
margin_right = 234.0
margin_bottom = 64.0
text = "100%"
align = 1

[node name="Particles" parent="VBoxContainer/HBoxContainer/CompletionContainer/Value" instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="GradeContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 238.0
margin_right = 472.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 63 )
mouse_filter = 0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/GradeContainer"]
margin_right = 234.0
margin_bottom = 30.0
text = "Overall grade:"
align = 1

[node name="Value" type="Label" parent="VBoxContainer/HBoxContainer/GradeContainer"]
margin_top = 34.0
margin_right = 234.0
margin_bottom = 64.0
text = "S+"
align = 1

[node name="Particles" parent="VBoxContainer/HBoxContainer/GradeContainer/Value" instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Spacer" type="Control" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 472.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 20 )

[node name="CongratulationsLabel" type="Label" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 472.0
margin_bottom = 188.0
text = "Congratulations!

You are a super player."
align = 1
valign = 1

[node name="Title" type="Node2D" parent="."]
position = Vector2( -44.694, 50 )
script = ExtResource( 4 )
CreditsLetterScene = ExtResource( 3 )

[node name="LetterSprites" type="Node2D" parent="Title"]

[node name="LetterCenterPath" type="Path2D" parent="Title"]
curve = SubResource( 1 )

[node name="GradeScrambleTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="BebebeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -12.0
bus = "Sound Bus"

[node name="ClockAdvanceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 2.0
bus = "Sound Bus"

[node name="ClockRingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -4.0
bus = "Sound Bus"

[node name="ComboSound0" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Sound Bus"

[node name="ComboSound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Sound Bus"

[node name="ComboSound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
bus = "Sound Bus"

[node name="ComboSound3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
bus = "Sound Bus"

[node name="ComboSound4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
bus = "Sound Bus"

[node name="ComboSound5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
bus = "Sound Bus"

[node name="ComboSound6" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "Sound Bus"

[node name="ComboSound7" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
bus = "Sound Bus"

[connection signal="timeout" from="GradeScrambleTimer" to="." method="_on_GradeScrambleTimer_timeout"]
